# lottr

./: Cargo.toml  README.md
assets/: options_ain.toml  options_ks.toml  options_mtool.toml  options_text.toml  pino.txt  prompt_violation_1.json  prompt_violation_2.json  prompt_violation_3.json  prompt_violation_4.json  prompt_violation_5.json  test_mtool.json
src/: lib.rs  main.rs  textures.rs  utils.rs
src/input/: input.rs  mod.rs
src/inputs/: input.rs  mod.rs
src/output/: kiri.rs  mod.rs  mtool.rs  output.rs  replace.rs  text.rs
src/outputs/: mod.rs  output.rs  replace.rs  text.rs
src/translator/: chatgpt.rs  mod.rs  translator.rs
src/translators/: chatgpt.rs  translator.rs
