[package]
name = "lottr"
version = "0.1.0"
edition = "2021"
about = "A command line tool for text-base  translation using GPT-3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tiktoken-rs = {version = "0.4.0", features = ["async-openai"] }
async-trait = "0.1.68"
anyhow = "1.0.70"
ctrlc = "3.2.5"
regex = "1.7.3"
toml = "0.7.3"
clap = { version = "4.2.5", features = ["derive"] }
